@@ -108,13 +108,12 @@ Mojo::IOLoop->singleton->reactor->io(
 my $ua = Mojo::UserAgent->new(ioloop => Mojo::IOLoop->singleton, insecure => 1);
 $ua->proxy->http("socks://foo:baz\@127.0.0.1:$port");
 my $tx = $ua->get('/');
-ok !$tx->success, 'not successful';
 ok $tx->error, 'has error';
 
 # Simple request with SOCKS proxy
 $ua->proxy->http("socks://foo:bar\@127.0.0.1:$port");
 $tx = $ua->get('/');
-ok $tx->success, 'successful';
+ok !$tx->error,      'no error';
 ok !$tx->kept_alive, 'kept connection not alive';
 ok $tx->keep_alive, 'keep connection alive';
 is $tx->res->code, 200, 'right status';
@@ -127,7 +126,7 @@ isnt(Mojo::IOLoop->stream($tx->connection)->handle->sockport,
 # Keep alive request with SOCKS proxy
 my $before = $last;
 $tx = $ua->get('/');
-ok $tx->success,    'successful';
+ok !$tx->error, 'no error';
 ok $tx->kept_alive, 'kept connection alive';
 ok $tx->keep_alive, 'keep connection alive';
 is $tx->res->code, 200, 'right status';
@@ -154,7 +153,7 @@ isnt(Mojo::IOLoop->stream($id)->handle->sockport, $last, 'different ports');
 $ua->proxy->https("socks://foo:bar\@127.0.0.1:$port");
 $ua->server->url('https');
 $tx = $ua->get('/secure');
-ok $tx->success, 'successful';
+ok !$tx->error,      'no error';
 ok !$tx->kept_alive, 'kept connection not alive';
 ok $tx->keep_alive, 'keep connection alive';
 is $tx->res->code, 200,           'right status';
@@ -168,7 +167,7 @@ $ua->proxy->http("socks://foo:baz\@127.0.0.1:$port");
 $tx = $ua->build_tx(GET => '/');
 $tx->req->via_proxy(0);
 $tx = $ua->start($tx);
-ok $tx->success, 'successful';
+ok !$tx->error, 'no error';
 is $tx->res->code, 200, 'right status';
 is $tx->res->body, $tx->local_port, 'right content';
 
