@@ -13,7 +13,7 @@ use ojo;
 
 my $app = a('/' => sub ($c) { $_->render(data => 'signatures work') });
 my $tx = $app->ua->get('/');
-ok $tx->success, 'successful';
+ok !$tx->error, 'no error';
 is $tx->res->code, 200, 'right status';
 is $tx->res->body, 'signatures work', 'right content';
 
